--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+import java.util.regex.Pattern
 android {
     compileSdkVersion 26
     defaultConfig {
@@ -25,4 +25,15 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+}
+
+task('increaseVersionCode') << {
+    def manifestFile = file("src/main/AndroidManifest.xml")
+    def manifestText = manifestFile.getText()
+    def matcherVersionCode = Pattern.compile("versionCode=\"(\\d+)\"").matcher(manifestText)
+    matcherVersionCode.find()
+    def versionCode = Integer.parseInt(matcherVersionCode.group(1))
+    def manifestContentCode = matcherVersionCode.replaceAll("versionCode=\"" + ++versionCode + "\"")
+    manifestFile.write(manifestContentCode)
+
 }
